# tdd-loop

./: .gitignore  README.md  pyproject.toml
challenges/01_fizzbuzz/: README.md  spec.md  test_solution.py
challenges/02_balanced_parens/: README.md  spec.md  test_solution.py
challenges/03_roman_numerals/: README.md  spec.md  test_solution.py
challenges/04_lru_cache/: README.md  spec.md  test_solution.py
challenges/05_word_frequency/: README.md  spec.md  test_solution.py
docs/: architecture.md
runs/sample-lru-cache/: attempt_01.json  attempt_01.py  attempt_02.json  attempt_02.py  attempt_03.json  attempt_03.py  summary.json
tdd_loop/: __init__.py  cli.py  llm.py  loop.py  prompts.py  runner.py  schemas.py
tests/: test_loop.py  test_runner.py
tests/fixtures/: test_add.py
